<resources>
    <string name="app_name">Group04_ReadBookOnline</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="btsignin">SIGN IN</string>
    <string name="tai_khoan">Tài khoản:</string>
    <string name="mat_khau">Mật khẩu:</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="email">Email:</string>
    <string name="no_account">Have no account yet? Sign up </string>
</resources>