<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:src="@drawable/anytime"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Logo"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:text="@string/login"
            android:textColor="#04F45C"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
                android:id="@+id/edtTaiKhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/tai_khoan"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#777474"
                android:textSize="16sp" />



            <EditText
                android:id="@+id/edtMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/mat_khau"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#777474"
                android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/btsignin"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/green"/>


    </LinearLayout>


</RelativeLayout>